2009-04-23	Mike Massonnet
Yet another GMarkup fix

2009-04-22	Mike Massonnet
Update documentation

2009-04-22	Mike Massonnet
New option to exclude selections from the history

	- panel-plugin/settings-dialog.glade:
		Move option "Add selections" to new frame "Behavior" and add a
		new option that allows to exclude the selections from the
		history.
	- panel-plugin/collector.c:
		Install a new property history-ignore-primary-clipboard use it
		inside cb_check_primary_clipboard() to prevent a selection
		from going into the history.
	- panel-plugin/main.c:
		Bind new property to xfconf and the settings dialog.
	- panel-plugin/common.h:
		New default setting for history-ignore-primary-clipboard.

2009-04-21	Mike Massonnet
Refixing the last two commits with the right function calls

	- panel-plugin/main.c:
		Use g_markup_printf_escaped() instead of in-between variables
		being set with g_markup_escape_text().

2009-04-21	Mike Massonnet
Same commit for the regex and the command that are also displayed

2009-04-21	Mike Massonnet
Markup escape for action name and command name in the treeview

2009-04-21	Mike Massonnet
Add OnlyShowIn to the desktop entry file for the menu

	- xfce4-clipman-plugin.desktop.in:
		The file is using a reserved category and therefore must have
		a OnlyShowIn key.

2009-04-21	Mike Massonnet
Open the documentation in the user locale

	- panel-plugin/main.c(cb_show_help):
		Trigger through possible filenames based on the user locale.

2009-04-21	Mike Massonnet
Update documentation

2009-04-20	Mike Massonnet
=== Release 1.0.0 ===

2009-04-19	Mike Massonnet
Add me to the documenters

2009-04-19	Mike Massonnet
Set Help button sensitive in dialog and add code to show the help

	- panel-plugin/Makefile.am:
		Define DATAROOTDIR to be able to point into xfce4/doc.
	- panel-plugin/main.c:
		New callback cb_show_help to run a command that opens the html
		manual file.

2009-04-19	Mike Massonnet
Add documentation

2009-04-18	Mike Massonnet